--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,7 @@
 
 # Go workspace file
 go.work
-output/sequential_writing_tenmillion.txt
+
+output/*.txt
+file_writer/file_writer.go
+**/benchmark_results.txt
